fixed the rating button color on mobile
after selecting a rating and tapping elsewhere, the selected rating background will properly turn orange now.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -149,9 +149,11 @@ button {
     cursor: pointer;
 }
 
-#submit:hover {
-    background-color: var(--white);
-    color: var(--orange);
+@media(hover: hover ) and (pointer: fine) {
+    #submit:hover {
+        background-color: var(--white);
+        color: var(--orange);
+    }
 }
 
 #thank-you-img {
